--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <h1>Charles D</h1>
+    <p>From Atlanta, student at GSU before coming to TIY,coding because it's great.</p>
   </body>
 </html>
