--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
   <body>
     <h1>Charles D</h1>
     <p>From Atlanta, student at GSU before coming to TIY,coding because it's great.</p>
+    <h3>Programming Languages:</h3>
+    <p>JS, Ruby, Java</p><a href="https://github.com/windspinks" target="_blank">My Github Profile</a>
   </body>
 </html>
